<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AboutFragment">

    <TextView
        android:id="@+id/textViewMatricule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="69dp"
        android:text="@string/matricule"
        android:textSize="21sp" />

    <TextView
        android:id="@+id/textViewFirstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="150dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="69dp"
        android:text="@string/firstname"
        android:textSize="21sp" />

    <TextView
        android:id="@+id/textViewLastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="200dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="69dp"
        android:text="@string/lastname"
        android:textSize="21sp" />
</FrameLayout>